apps/lab-ca/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-ca
  namespace: lab-ca
spec:
  selector:
    app: lab-ca
  ports:
    - port: 80
      targetPort: http
      name: http
